1999-10-28  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * conditio.lsp (define-condition): Accept a :DEFAULT-INITARGS option.

1999-10-24  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (elt_reverse, elt_nreverse): New declarations.
        * array.d (elt_reverse, elt_nreverse): New functions.
        * sequence.d (REVERSE): For vectors, use elt_reverse.
          (NREVERSE): For vectors, use elt_nreverse.

1999-10-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (uint1_p, uint2_p, uint4_p): New macros.
          (fehler_index_range, fehler_store, elt_copy, elt_move, elt_fill):
          New declarations.
        * array.d (fehler_index_range): Make global.
          (fehler_store): New function, taken out of storagevector_store.
          (storagevector_store): Call it.
          (bit_copy, elt_copy_*_*, elt_copy): New functions.
          (elt_move_*, elt_move): New functions.
          (elt_fill): New function.
          (VECTOR-PUSH-EXTEND): Use the elt_copy_*_* functions.
          (ssbvector_push_extend): Use elt_copy_8Bit_8Bit.
          (make_storagevector): Use elt_fill.
          (reshape): Use elt_copy for speedup.
        * sequence.d (fehler_vector_index_range): New function.
          (copy_seqpart_into): For vectors, use elt_copy or elt_move.
          (MAKE-SEQUENCE, FILL): For vectors, use elt_fill.

1999-10-29  Sam Steingold  <sds@ksp.com>

	* modules/regexp/regexp.lsp (with-loop-split): New macro.
	(regexp-compile, regexp-exec, regexp-split): New functions.
	(match-once, %match): Use `regexp-compile' and `regexp-exec'.
	(regexp-compile, regexp-exec, regexp-split, with-loop-split): Export.

1999-10-22  Sam Steingold  <sds@ksp.com>

	* modules/clx/new-clx/demos/clx-demos.lsp (x-host-display):
	return 3 values (host, server, screen).
	Compile `qix' and `socoban' when compiling `clx-demos'.

1999-10-19  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
