@@ -4219,7 +4219,7 @@ LISPFUN(read_byte_sequence,2,0,norest,key,2, (kw(start),kw(end)) )
       { var uintL start = posfixnum_to_L(STACK_2);
         var uintL end = posfixnum_to_L(STACK_1);
         var uintL index = 0;
-        STACK_0 = iarray_displace_check(STACK_4,end,&index);
+        STACK_0 = array_displace_check(STACK_4,end,&index);
        {var uintL result = read_byte_array(&STACK_3,&STACK_0,index+start,end-start);
         value1 = fixnum(start+result); mv_count=1;
         skipSTACK(5);
@@ -4262,7 +4262,7 @@ LISPFUN(write_byte_sequence,2,0,norest,key,2, (kw(start),kw(end)) )
       { var uintL start = posfixnum_to_L(STACK_2);
         var uintL end = posfixnum_to_L(STACK_1);
         var uintL index = 0;
-        STACK_0 = iarray_displace_check(STACK_4,end,&index);
+        STACK_0 = array_displace_check(STACK_4,end,&index);
         write_byte_array(&STACK_3,&STACK_0,index+start,end-start);
         goto done;
       }
